<resources>
    <string name="app_name">Radio</string>
    <string name="action_settings">Settings</string>
    <string name="background">Choose a background color:</string>
    <string name="foreground">Choose a foreground color:</string>
    <string name="black">Black</string>
    <string name="pink">Pink</string>
    <string name="yellow">Yellow</string>
    <string name="white">White</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="set">SET</string>
</resources>
